logs_kd/server_20250904_114741.log
Traceback (most recent call last):
  File "/home/caidonghua/miniconda3/envs/grpc/lib/python3.10/runpy.py", line 187, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/home/caidonghua/miniconda3/envs/grpc/lib/python3.10/runpy.py", line 157, in _get_module_details
    code = loader.get_code(mod_name)
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/caidonghua/FedReal/server/server_kd_main.py", line 156
    public_unl_loader, server_test_loader = make_global_loaders(
                                                               ^
SyntaxError: '(' was never closed
